feat: add firebase auth, firestore and authentication flow

--- a/cinemo/tsconfig.json
+++ b/cinemo/tsconfig.json
@@ -21,13 +21,14 @@
 		],
 		"paths": {
 			"@/*": ["/*"],
-			"@styles/*": ["styles/*"],
-			"@components/*": ["components/*"],
-			"@lib/*": ["lib/*"],
-			"@app/*": ["app/*"],
-			"@types/*": ["types/*"],
-			"@utils/*": ["utils/*"],
-			"@hooks/*": ["hooks/*"]
+			"@/styles/*": ["styles/*"],
+			"@/components/*": ["components/*"],
+			"@/lib/*": ["lib/*"],
+			"@/app/*": ["app/*"],
+			"@/types/*": ["types/*"],
+			"@/utils/*": ["utils/*"],
+			"@/hooks/*": ["hooks/*"],
+			"@/stores/*": ["stores/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
