fix: match .mjs files for lint-staged

--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,mjs}": [
+    "*.{js,jsx,ts,tsx}": [
       "prettier --write --ignore-unknown",
       "next lint --fix --file"
     ],
-    "*.{json,css,scss,md}": [
+    "*.{json,css,scss,md,mjs}": [
       "prettier --write --ignore-unknown"
     ]
   }
