--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sass": "^1.86.3",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
