--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.66.7",
     "firebase": "^11.3.1",
+    "firebase-admin": "^13.3.0",
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
