feat: preferences ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
       "@/types/*": ["types/*"],
       "@/utils/*": ["utils/*"],
       "@/hooks/*": ["hooks/*"],
-      "@/stores/*": ["stores/*"]
+      "@/store/*": ["store/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
